# HW11-WEB

./: README.md  docker-compose.yml  env.example  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_1/source/: conf.py
migrations/: env.py
migrations/versions/: 5d2d709bbd85_init.py  f7ca08e7e4e2_init.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: todos.py  users.py
src/routes/: auth.py  todos.py
src/schemas/: todo.py
src/services/: auth.py  email.py
tests/: test_unit_repository_todo.py
