[tool.poetry]
name = "l-11"
version = "0.1.0"
description = ""
authors = ["NOne"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
