[tool.poetry]
name = "l-11"
version = "0.1.0"
description = ""
authors = ["NOne"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
greenlet = "^3.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
libgravatar = "^1.0.4"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
fastapi-mail = "^1.4.1"
redis = "^5.0.3"
psycopg2-binary = "^2.9.9"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
